--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-/* ESTILOS COMPARTIDOS ENTRE index.html Y perfil.html */
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -8,7 +6,7 @@ body {
     color: #333;
 }
 
-/* HEADER Y FOOTER */
+/* index.html */
 
 header, footer {
     color: #fff;
@@ -27,8 +25,6 @@ footer {
     margin-top: 40px;
 }
 
-/* CONTENEDORES Y SECCIONES */
-
 section {
     background-color: #fff;
     padding: 15px;
@@ -37,7 +33,7 @@ section {
     box-shadow: 0 2px 4px rgba(0,0,0,0.05);
 }
 
-/* NAVEGACIÓN */
+/* NAV */
 
 nav ul {
     list-style-type: none;
@@ -97,7 +93,9 @@ nav ul li {
     background-color: #f9f9f9;
     border-radius: 5px;
     box-shadow: 10px 10px 3px rgba(0,0,0,0.1);
-    transition: all 0.2s ease;
+    transition: all 0.4s ease;
+    transform-origin: center;
+    overflow: hidden;
 }
 
 .student-list img {
@@ -112,7 +110,22 @@ nav ul li {
     font-weight: 500;
 }
 
-/* PERFIL PERSONAL */
+.student-list li:hover {
+    background-color: #99c5dd;
+    transform: scale(1.1) rotate(2deg);
+}
+
+.student-list li img,
+.student-list li div {
+    transition: all 0.4s ease;
+}
+
+.student-list li:hover img,
+.student-list li:hover div {
+    transform: scale(0.95) rotate(2deg);
+}
+
+/* perfil.html */
 
 .wrapper {
     display: flex;
