--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 /* css chequeado */
 /* Compartido por los dos html*/
-
+html{
+    height: 100%;
+}
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -10,6 +12,12 @@ body {
 }
 
 /* index.html */
+
+.index-body{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
 
 header, footer {
     color: #fff;
@@ -25,7 +33,7 @@ footer {
     text-align: center;
     font-size: 0.8em;
     padding: 20px;
-    margin-top: 30px;
+    margin-top: auto;
 }
 
 section {
@@ -34,6 +42,7 @@ section {
     margin: 10px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    flex-grow: 1;
 }
 
 /* NAV */
