--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,11 @@
   <title>ATI Estudiantes</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
   <script src="{{ url_for('static', filename='js/app.js') }}" defer></script>
+  <script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const lang = urlParams.get("lang") || "es";
+    sessionStorage.setItem("lang", lang);
+  </script>
 </head>
 <body>
   <header>
